# hafez

./: .env  README.md  pyproject.toml
hafez/: config.py  data_collector.py  helpers.py  preprocessor.py  run.py  train.py
